<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.alejandromoran.memegeneratorpro.activities.LoginActivity"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/logo"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/text_margin" />

        <Button
            android:id="@+id/facebookLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/loginWithFacebook"
            android:background="#3b5998"
            android:textColor="#ffffff"
            android:padding="10dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with Twitter"
            android:id="@+id/twitterLogin"
            android:padding="10dp"
            android:background="#326ada"
            android:textColor="#FFF" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login with Google+"
            android:id="@+id/googlePlusLogin"
            android:padding="10dp"
            android:background="#d34836"
            android:textColor="#FFF"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/pleaseRead"
            android:id="@+id/pleaseRead"
            android:layout_marginTop="@dimen/text_margin" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/privacyPolicy"
            android:id="@+id/privacyPolicy"
            android:textStyle="bold"
            android:textColor="#2d009f" />
    </LinearLayout>

</RelativeLayout>
